--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-		<h1>Hello</h1>
+		<!-- Text Elements -->
+		<h1>Heading 1</h1>
+		<h2>Heading 2</h2>
+		<h3>Heading 3</h3>
+		<h4>Heading 5</h4>
+		<h5>Heading 6</h5>
+		<p>This is a paragraph</p>
+		<!-- Links -->
+		<a href=""></a>
+		<!-- Lists -->
+		<ul>
+			<li>List Item 1</li>
+			<li>List Item 2</li>
+			<li>List Item 3</li>
+			<li>List Item 4</li>
+			<li>List Item 5</li>
+		</ul>
+		<!-- Buttons -->
+		<button>Click Me</button>
+		<button>Click Me</button>
+		<button>Click Me</button>
+		<button>Click Me</button>
+		<button>Click Me</button>
+		<!-- Forms -->
+		<!-- Inputs -->
+		<!-- Tables -->
 	</body>
 </html>
