--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	</head>
 	<body>
 		<!-- Text Elements -->
-		<h1>Heading 1</h1>
-		<h2>Heading 2</h2>
-		<h3>Heading 3</h3>
-		<h4>Heading 5</h4>
-		<h5>Heading 6</h5>
-		<p>This is a paragraph</p>
+		<h1 class="fs-xxl mb-1">Heading 1</h1>
+		<h2 class="fs-xl mb-1">Heading 2</h2>
+		<h3 class="fs-lg mb-1">Heading 3</h3>
+		<h4 class="fs-md mb-1">Heading 5</h4>
+		<h5 class="fs-sm mb-1">Heading 6</h5>
+		<p class="fs-sm mb-1">This is a paragraph</p>
 		<!-- Links -->
 		<a href=""></a>
 		<!-- Lists -->
