--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h5>Heading 6</h5>
 		<p>This is a paragraph</p>
 		<!-- Links -->
-		<a href=""></a>
+		<a href="#">Link</a>
 		<!-- Lists -->
 		<ul>
 			<li>List Item 1</li>
@@ -31,7 +31,28 @@
 		<button>Click Me</button>
 		<button>Click Me</button>
 		<!-- Forms -->
+		<form>
+			<input type="radio" id="radioForm" name="form1" value="form1yes">
+			<label for="form1">Radio Gaga</label><br>
+			<input type="checkbox" id="checkForm" name="form2" value="form2yes">
+			<label for="form2">Checks Out</label><br>
+		  </form>
 		<!-- Inputs -->
+		<form action="">
+			<label for="inputText">First name:</label><br>
+			<input type="text" id="inputText" name="inputText" value="Input Text"><br>
+			<input type="submit" value="Submit">
+		  </form>
 		<!-- Tables -->
+		<table>
+			<tr>
+			  <th>R1C1</th>
+			  <th>R1C2</th>
+			</tr>
+			<tr>
+			  <td>R2C1</td>
+			  <td>R2C2</td>
+			</tr>
+		  </table>
 	</body>
 </html>
