--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 			<li>List Item 5</li>
 		</ul>
 		<!-- Buttons -->
-		<button>Click Me</button>
-		<button>Click Me</button>
-		<button>Click Me</button>
-		<button>Click Me</button>
-		<button>Click Me</button>
+		<button class="btn-primary-button">Primary</button>
+		<button class="btn-secondary-button">Secondary</button>
+		<button class="success-button">Success</button>
+		<button class="warning-button">Warning</button>
+		<button class="info-button">Info</button>
 		<!-- Forms -->
 		<!-- Inputs -->
 		<!-- Tables -->
