--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 		<form>
 			<input type="radio" id="radioForm" name="form1" value="form1yes">
 			<label for="form1">Radio Gaga</label><br>
+			<input type="radio" id="radioForm2" name="form3" value="form3yes">
+			<label for="form3">Radio Gogo</label><br>
 			<input type="checkbox" id="checkForm" name="form2" value="form2yes">
 			<label for="form2">Checks Out</label><br>
 		  </form>
