successfully added button style!

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<li>List Item 5</li>
 		</ul>
 		<!-- Buttons -->
-		<button class="btn-primary-button">Primary</button>
-		<button class="btn-secondary-button">Secondary</button>
+		<button class="button-primary-button">Primary</button>
+		<button class="button-secondary-button">Secondary</button>
 		<button class="success-button">Success</button>
 		<button class="warning-button">Warning</button>
 		<button class="info-button">Info</button>
