--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 			<input type="submit" value="Submit">
 		  </form>
 		<!-- Tables -->
+		<p>
+			Table
+		</p>
 		<table>
 			<tr>
 			  <th>R1C1</th>
