--- a/index.html
+++ b/index.html
@@ -7,55 +7,71 @@
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-		<!-- Text Elements -->
-		<h1 class="fs-xxl mb-1">Heading 1</h1>
-		<h2 class="fs-xl mb-1">Heading 2</h2>
-		<h3 class="fs-lg mb-1">Heading 3</h3>
-		<p class="fs-md mb-1">This is a paragraph</p>
-		<!-- Links -->
-		<a href="#">Link</a>
-		<!-- Lists -->
-		<ul>
-			<li>List Item 1</li>
-			<li>List Item 2</li>
-			<li>List Item 3</li>
-			<li>List Item 4</li>
-			<li>List Item 5</li>
-		</ul>
-		<!-- Buttons -->
-		<button class="button-primary-button">Primary</button>
-		<button class="button-secondary-button">Secondary</button>
-		<button class="success-button">Success</button>
-		<button class="warning-button">Warning</button>
-		<button class="info-button">Info</button>
-		<!-- Forms -->
-		<form>
-			<input type="radio" id="radioForm" name="form1" value="form1yes">
-			<label for="form1">Radio Gaga</label><br>
-			<input type="radio" id="radioForm2" name="form3" value="form3yes">
-			<label for="form3">Radio Gogo</label><br>
-			<input type="checkbox" id="checkForm" name="form2" value="form2yes">
-			<label for="form2">Checks Out</label><br>
-		  </form>
-		<!-- Inputs -->
-		<form action="">
-			<label for="inputText">First name:</label><br>
-			<input type="text" id="inputText" name="inputText" value="Input Text"><br>
-			<input type="submit" value="Submit">
-		  </form>
-		<!-- Tables -->
-		<p>
-			Table
-		</p>
-		<table>
-			<tr>
-			  <th>R1C1</th>
-			  <th>R1C2</th>
-			</tr>
-			<tr>
-			  <td>R2C1</td>
-			  <td>R2C2</td>
-			</tr>
-		  </table>
+		<div class="container">
+			<!-- Text Elements -->
+			<h1 class="fs-xxl mb-1">Heading 1</h1>
+			<h2 class="fs-xl mb-1">Heading 2</h2>
+			<h3 class="fs-lg mb-1">Heading 3</h3>
+			<p class="fs-md mb-1">This is a paragraph</p>
+			<!-- Links -->
+			<a href="#">Link</a>
+			<!-- Lists -->
+			<ul>
+				<li>List Item 1</li>
+				<li>List Item 2</li>
+				<li>List Item 3</li>
+				<li>List Item 4</li>
+				<li>List Item 5</li>
+			</ul>
+			<!-- Buttons -->
+			<button class="button-primary-button">Primary</button>
+			<button class="button-secondary-button">Secondary</button>
+			<button class="success-button">Success</button>
+			<button class="warning-button">Warning</button>
+			<button class="info-button">Info</button>
+			<!-- Forms -->
+			<form>
+				<input
+					type="radio"
+					id="radioForm"
+					name="form1"
+					value="form1yes" />
+				<label for="form1">Radio Gaga</label><br />
+				<input
+					type="radio"
+					id="radioForm2"
+					name="form3"
+					value="form3yes" />
+				<label for="form3">Radio Gogo</label><br />
+				<input
+					type="checkbox"
+					id="checkForm"
+					name="form2"
+					value="form2yes" />
+				<label for="form2">Checks Out</label><br />
+			</form>
+			<!-- Inputs -->
+			<form action="">
+				<label for="inputText">First name:</label><br />
+				<input
+					type="text"
+					id="inputText"
+					name="inputText"
+					value="Input Text" /><br />
+				<input type="submit" value="Submit" />
+			</form>
+			<!-- Tables -->
+			<p>Table</p>
+			<table>
+				<tr>
+					<th>R1C1</th>
+					<th>R1C2</th>
+				</tr>
+				<tr>
+					<td>R2C1</td>
+					<td>R2C2</td>
+				</tr>
+			</table>
+		</div>
 	</body>
 </html>
