--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 				<li>List Item 4</li>
 				<li>List Item 5</li>
 			</ul>
+			<ol>
+				<li>List Item 1</li>
+				<li>List Item 2</li>
+				<li>List Item 3</li>
+				<li>List Item 4</li>
+				<li>List Item 5</li>
+			</ol>
 			<!-- Buttons -->
 			<button class="button-primary-button">Primary</button>
 			<button class="button-secondary-button">Secondary</button>
