--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 			<h2 class="fs-xl mb-1">Heading 2</h2>
 			<h3 class="fs-lg mb-1">Heading 3</h3>
 			<p class="fs-md mb-1">This is a paragraph</p>
+			<p class="fs-md fw-r mb-1">Regular Font Weight</p>
+			<p class="fs-md fw-l mb-1">Light Font Weight</p>
+			<p class="fs-md fw-b mb-1">Bold Font Weight</p>
 			<!-- Links -->
 			<a href="#">Link</a>
 			<!-- Lists -->
