--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
 				<form>
 					<input
 						type="radio"
-						id="radioForm"
+						id="radioGaga"
 						name="form1"
-						value="form1yes" />
-					<label for="form1">Radio Gaga</label><br />
+						value="Gaga" />
+					<label for="radioGaga">Radio Gaga</label><br />
 					<input
 						type="radio"
-						id="radioForm2"
-						name="form3"
-						value="form3yes" />
-					<label for="form3">Radio Gogo</label><br />
+						id="radioGogo"
+						name="form1"
+						value="gogo" />
+					<label for="radioGogo">Radio Gogo</label><br />
 					<input
 						type="checkbox"
 						id="checkForm"
 						name="form2"
-						value="form2yes" />
+						value="yes" />
 					<label for="form2">Checks Out</label><br />
 				</form>
 			</div>
