did the buttons

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<!-- Buttons -->
 		<button class="button-primary-button">Primary</button>
 		<button class="button-secondary-button">Secondary</button>
-		<button class="success-button">Success</button>
-		<button class="warning-button">Warning</button>
-		<button class="info-button">Info</button>
+		<button class="button-success-button">Success</button>
+		<button class="button-warning-button">Warning</button>
+		<button class="button-info-button">Info</button>
 		<!-- Forms -->
 		<form>
 			<input type="radio" id="radioForm" name="form1" value="form1yes">
