--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 			<div>
 				<button class="button-primary-button">Primary</button>
 				<button class="button-secondary-button">Secondary</button>
-				<button class="success-button">Success</button>
-				<button class="warning-button">Warning</button>
-				<button class="info-button">Info</button>
+				<button class="button-success-button">Success</button>
+				<button class="button-warning-button">Warning</button>
+				<button class="button-info-button">Info</button>
 			</div>
 			<!-- Forms -->
 			<div>
