--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 			<p class="fs-md fw-l mb-1">Light Font Weight</p>
 			<p class="fs-md fw-b mb-1">Bold Font Weight</p>
 			<!-- Links -->
-			<a href="#">Link</a>
+			<div>
+				<a href="#">Link</a>
+			</div>
 			<!-- Lists -->
 			<div>
 				<ul>
