font weight changes

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 			<h1 class="fs-xxl mb-1">Heading 1</h1>
 			<h2 class="fs-xl mb-1">Heading 2</h2>
 			<h3 class="fs-lg mb-1">Heading 3</h3>
-			<p class="fs-md mb-1">This is a paragraph</p>
-			<p class="fs-md fw-r mb-1">Regular Font Weight</p>
-			<p class="fs-md fw-l mb-1">Light Font Weight</p>
-			<p class="fs-md fw-b mb-1">Bold Font Weight</p>
+			<div class="mb-1">
+				<span class="fs-md fw-r mb-1">Regular Font Weight</span> |
+				<span class="fs-md fw-l mb-1">Light Font Weight</span> |
+				<span class="fs-md fw-b mb-1">Bold Font Weight</span> |
+			</div>
 			<!-- Links -->
 			<div>
 				<a href="#">Link</a>
