--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 			<h2 class="fs-xl mb-1">Heading 2</h2>
 			<h3 class="fs-lg mb-1">Heading 3</h3>
 			<div class="mb-1">
-				<span class="fs-md fw-r mb-1">Regular Font Weight</span> |
-				<span class="fs-md fw-l mb-1">Light Font Weight</span> |
-				<span class="fs-md fw-b mb-1">Bold Font Weight</span> |
+				<span class="fs-md fw-r">Regular Font Weight</span> |
+				<span class="fs-md fw-l">Light Font Weight</span> |
+				<span class="fs-md fw-b">Bold Font Weight</span> |
 			</div>
 			<!-- Links -->
 			<div>
