file name change & html adds

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 				<span class="fs-md fw-l">Light Font Weight</span> |
 				<span class="fs-md fw-b">Bold Font Weight</span> |
 			</div>
+			<div class="mb-1">
+				<span class="text-primary">Primary Text Color</span> |
+				<span class="text-secondary">Secondary Text Color</span> |
+				<span class="text-success">Success Text Color</span> |
+				<span class="text-warning">Warning Text Color</span> |
+				<span class="text-info">Info Text Color</span> |
+			</div>
 			<!-- Links -->
 			<div>
 				<a href="#">Link</a>
