--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 				<span class="text-warning">Warning Text Color</span> |
 				<span class="text-info">Info Text Color</span> |
 			</div>
+			<div class="mb-1">
+				<span class="bg-primary p-1">Primary Background</span>
+				<span class="bg-secondary p-1">Secondary Background</span>
+				<span class="bg-success p-1">Success Background</span>
+				<span class="bg-warning p-1">Warning Background</span>
+				<span class="bg-info p-1">Info Background</span>
+			</div>
 			<!-- Links -->
 			<div>
 				<a href="#">Link</a>
