--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 				<span class="text-secondary">Secondary Text Color</span> |
 				<span class="text-success">Success Text Color</span> |
 				<span class="text-warning">Warning Text Color</span> |
-				<span class="text-info">Info Text Color</span> |
+				<span class="text-info bg-black">Info Text Color</span> |
 			</div>
 			<div class="mb-1">
-				<span class="bg-primary p-1">Primary Background</span>
-				<span class="bg-secondary p-1">Secondary Background</span>
+				<span class="bg-primary p-1 text-white"
+					>Primary Background</span
+				>
+				<span class="bg-secondary p-1 text-white"
+					>Secondary Background</span
+				>
 				<span class="bg-success p-1">Success Background</span>
 				<span class="bg-warning p-1">Warning Background</span>
 				<span class="bg-info p-1">Info Background</span>
