--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</ol>
 			</div>
 			<!-- Buttons -->
-			<div>
+			<div class="justify-center">
 				<button class="button-primary-button">Primary</button>
 				<button class="button-secondary-button">Secondary</button>
 				<button class="button-success-button">Success</button>
