working on link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<p class="fs-md fw-b mb-1">Bold Font Weight</p>
 			<!-- Links -->
 			<div>
-				<a href="#">Link</a>
+				<a class="link" href="#">Link</a>
 			</div>
 			<!-- Lists -->
 			<div>
