--- a/index.html
+++ b/index.html
@@ -9,22 +9,29 @@
 	<body>
 		<div class="container">
 			<!-- Text Elements -->
-			<h1 class="fs-xxl mb-1">Heading 1</h1>
-			<h2 class="fs-xl mb-1">Heading 2</h2>
-			<h3 class="fs-lg mb-1">Heading 3</h3>
-			<div class="mb-1">
+				<div class="justify-center">
+					<h1 class="fs-xxl mb pt-1 pb-2">Heading 1</h1>
+				</div>
+				<div class="justify-center">
+					<h2 class="fs-xl mb-1">Heading 2</h2>
+				</div>
+				<div class="justify-center">
+					<h3 class="fs-lg mb-1">Heading 3</h3>
+				</div>
+			
+			<div class="mb-1 justify-center pt-2">
 				<span class="fs-md fw-r">Regular Font Weight</span> |
 				<span class="fs-md fw-l">Light Font Weight</span> |
 				<span class="fs-md fw-b">Bold Font Weight</span> |
 			</div>
-			<div class="mb-1">
+			<div class="mb-1 justify-center">
 				<span class="text-primary">Primary Text Color</span> |
 				<span class="text-secondary">Secondary Text Color</span> |
 				<span class="text-success">Success Text Color</span> |
 				<span class="text-warning">Warning Text Color</span> |
 				<span class="text-info bg-black">Info Text Color</span> |
 			</div>
-			<div class="mb-1">
+			<div class="mb-1 justify-center">
 				<span class="bg-primary p-1 text-white"
 					>Primary Background</span
 				>
