--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 						type="text"
 						id="inputText"
 						name="inputText"
-						value="Input Text" /><br />
+						value=""
+						placeholder="enter your text here" /><br />
 					<input type="submit" value="Submit" />
 				</form>
 			</div>
