add border colours

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 	<body>
 		<div class="container">
 			<!-- Text Elements -->
-				<div class="justify-center">
-					<h1 class="fs-xxl mb pt-1 pb-2">Heading 1</h1>
-				</div>
-				<div class="justify-center">
-					<h2 class="fs-xl mb-1">Heading 2</h2>
-				</div>
-				<div class="justify-center">
-					<h3 class="fs-lg mb-1">Heading 3</h3>
-				</div>
-			
+			<div class="justify-center">
+				<h1 class="fs-xxl mb pt-1 pb-2">Heading 1</h1>
+			</div>
+			<div class="justify-center">
+				<h2 class="fs-xl mb-1">Heading 2</h2>
+			</div>
+			<div class="justify-center">
+				<h3 class="fs-lg mb-1">Heading 3</h3>
+			</div>
+
 			<div class="mb-1 justify-center pt-2">
 				<span class="fs-md fw-r">Regular Font Weight</span> |
 				<span class="fs-md fw-l">Light Font Weight</span> |
@@ -41,6 +41,13 @@
 				<span class="bg-success p-1">Success Background</span>
 				<span class="bg-warning p-1">Warning Background</span>
 				<span class="bg-info p-1">Info Background</span>
+			</div>
+			<div class="mb-1 justify-center">
+				<span class="br-primary mr-1">Primary Text Color</span>
+				<span class="br-secondary mr-1">Secondary Text Color</span>
+				<span class="br-success mr-1">Success Text Color</span>
+				<span class="br-warning mr-1">Warning Text Color</span>
+				<span class="br-info">Info Text Color</span>
 			</div>
 			<!-- Links -->
 			<div>
