add padding to borders

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 				<span class="bg-info p-1">Info Background</span>
 			</div>
 			<div class="mb-1 justify-center">
-				<span class="br-primary mr-1">Primary Text Color</span>
-				<span class="br-secondary mr-1">Secondary Text Color</span>
-				<span class="br-success mr-1">Success Text Color</span>
-				<span class="br-warning mr-1">Warning Text Color</span>
-				<span class="br-info">Info Text Color</span>
+				<span class="br-primary p-1 mr-1">Primary Text Color</span>
+				<span class="br-secondary p-1 mr-1">Secondary Text Color</span>
+				<span class="br-success p-1 mr-1">Success Text Color</span>
+				<span class="br-warning p-1 mr-1">Warning Text Color</span>
+				<span class="br-info p-1">Info Text Color</span>
 			</div>
 			<!-- Links -->
 			<div>
