--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<!-- Inputs -->
 			<div>
 				<form action="">
-					<label for="inputText">First name:</label><br />
+					<label for="inputText">Input textfield:</label><br />
 					<input
 						type="text"
 						id="inputText"
