adding border radius

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 			</div>
 
 			<div class="mb-1 justify-center pt-2">
-				<span class="fs-md fw-r">Regular Font Weight</span> |
-				<span class="fs-md fw-l">Light Font Weight</span> |
-				<span class="fs-md fw-b">Bold Font Weight</span> |
+				<span class="fs-md fw-r p-1">Regular Font Weight</span>
+				<span class="fs-md fw-l p-1">Light Font Weight</span>
+				<span class="fs-md fw-b p-1">Bold Font Weight</span>
 			</div>
 			<div class="mb-1 justify-center">
-				<span class="text-primary">Primary Text Color</span> |
-				<span class="text-secondary">Secondary Text Color</span> |
-				<span class="text-success">Success Text Color</span> |
-				<span class="text-warning">Warning Text Color</span> |
-				<span class="text-info bg-black">Info Text Color</span> |
+				<span class="text-primary p-1">Primary Text Color</span>
+				<span class="text-secondary p-1">Secondary Text Color</span>
+				<span class="text-success p-1">Success Text Color</span>
+				<span class="text-warning p-1">Warning Text Color</span>
+				<span class="text-info bg-black p-1">Info Text Color</span>
 			</div>
 			<div class="mb-1 justify-center">
 				<span class="bg-primary p-1 text-white"
@@ -43,11 +43,11 @@
 				<span class="bg-info p-1">Info Background</span>
 			</div>
 			<div class="mb-1 justify-center">
-				<span class="br-primary p-1 mr-1">Primary Text Color</span>
-				<span class="br-secondary p-1 mr-1">Secondary Text Color</span>
-				<span class="br-success p-1 mr-1">Success Text Color</span>
-				<span class="br-warning p-1 mr-1">Warning Text Color</span>
-				<span class="br-info p-1">Info Text Color</span>
+				<span class="br br-primary p-1 mr-1">Primary Border</span>
+				<span class="br br-secondary p-1 mr-1">Secondary Border</span>
+				<span class="br br-success p-1 mr-1">Success Border</span>
+				<span class="br br-warning p-1 mr-1">Warning Border</span>
+				<span class="br br-info p-1">Info Border</span>
 			</div>
 			<!-- Links -->
 			<div>
