--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						name="inputText"
 						value=""
 						placeholder="enter your text here" /><br />
-					<input type="submit" value="Submit" />
+					<input class="button-secondary-button" type="submit" value="Submit" />
 				</form>
 			</div>
 			<!-- Tables -->
