--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<a class="link" href="#">Link</a>
 			</div>
 			<!-- Lists -->
-			<div>
+			<div class="justify-center">
 				<ul>
 					<li>List Item 1</li>
 					<li>List Item 2</li>
@@ -62,6 +62,8 @@
 					<li>List Item 4</li>
 					<li>List Item 5</li>
 				</ul>
+			</div>
+			<div class="justify-center">
 				<ol>
 					<li>List Item 1</li>
 					<li>List Item 2</li>
@@ -111,7 +113,10 @@
 						name="inputText"
 						value=""
 						placeholder="enter your text here" /><br />
-					<input class="button-secondary-button" type="submit" value="Submit" />
+					<input
+						class="button-secondary-button"
+						type="submit"
+						value="Submit" />
 				</form>
 			</div>
 			<!-- Tables -->
