fixed the buttons

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 			</div>
 			<!-- Buttons -->
 			<div class="justify-center">
-				<button class="button-primary-button">Primary</button>
-				<button class="button-secondary-button">Secondary</button>
-				<button class="button-success-button">Success</button>
-				<button class="button-warning-button">Warning</button>
-				<button class="button-info-button">Info</button>
+				<button class="button-primary text-white br">Primary</button>
+				<button class="button-secondary br">Secondary</button>
+				<button class="button-success br">Success</button>
+				<button class="button-warning br">Warning</button>
+				<button class="button-info br">Info</button>
 			</div>
 			<!-- Forms -->
 			<div>
