fix submit button

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						value=""
 						placeholder="enter your text here" /><br />
 					<input
-						class="button-secondary-button"
+						class="button-secondary br"
 						type="submit"
 						value="Submit" />
 				</form>
