added buttons text in HTML

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 				</ol>
 			</div>
 			<!-- Buttons -->
+			<h3 class="justify-center pt-2"> Buttons:</h3>
 			<div class="justify-center">
 				<button class="button-primary text-white br">Primary</button>
 				<button class="button-secondary br">Secondary</button>
