change border color to bc

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				</ol>
 			</div>
 			<!-- Buttons -->
-			<h3 class="justify-center pt-2"> Buttons:</h3>
+			<h3 class="justify-center pt-2">Buttons:</h3>
 			<div class="justify-center">
 				<button class="button-primary text-white br">Primary</button>
 				<button class="button-secondary br">Secondary</button>
@@ -124,7 +124,7 @@
 			<div>
 				<p>Table</p>
 				<table>
-					<tr>
+					<tr class="b">
 						<th>R1C1</th>
 						<th>R1C2</th>
 					</tr>
