--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 				<span class="bg-info p-1">Info Background</span>
 			</div>
 			<div class="mb-1 justify-center">
-				<span class="br br-primary p-1 mr-1">Primary Border</span>
-				<span class="br br-secondary p-1 mr-1">Secondary Border</span>
-				<span class="br br-success p-1 mr-1">Success Border</span>
-				<span class="br br-warning p-1 mr-1">Warning Border</span>
-				<span class="br br-info p-1">Info Border</span>
+				<span class="br bc-primary p-1 mr-1">Primary Border</span>
+				<span class="br bc-secondary p-1 mr-1">Secondary Border</span>
+				<span class="br bc-success p-1 mr-1">Success Border</span>
+				<span class="br bc-warning p-1 mr-1">Warning Border</span>
+				<span class="br bc-info p-1">Info Border</span>
 			</div>
 			<!-- Links -->
 			<div>
