--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<button class="button-info br">Info</button>
 			</div>
 			<!-- Forms -->
-			<div>
+			<div class="justify-center">
 				<form>
 					<input
 						type="radio"
