added font sizes

--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
 		<div class="container">
 			<!-- Text Elements -->
 			<div class="justify-center">
-				<h1 class="fs-xxl mb pt-1 pb-2">Heading 1</h1>
+				<div class="fs-xxl mb pt-1 pb-2">Double Extra Large Text</div>
 			</div>
 			<div class="justify-center">
-				<h2 class="fs-xl mb-1">Heading 2</h2>
+				<div class="fs-xl mb-1">Extra Large Text</div>
 			</div>
 			<div class="justify-center">
-				<h3 class="fs-lg mb-1">Heading 3</h3>
+				<div class="fs-lg mb-1">Large Text</div>
+			</div>
+			<div class="justify-center">
+				<div class="fs-md mb-1">Medium Text</div>
+			</div>
+			<div class="justify-center">
+				<div class="fs-sm mb-1">Small Text</div>
 			</div>
 
-			<div class="mb-1 justify-center pt-2">
+			<div class="mb-1 justify-center">
 				<span class="fs-md fw-r p-1">Regular Font Weight</span>
 				<span class="fs-md fw-l p-1">Light Font Weight</span>
 				<span class="fs-md fw-b p-1">Bold Font Weight</span>
