--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
 			<div class="justify-center">
 				<h3 class="fs-lg mb-1">Heading 3</h3>
 			</div>
-
+			<!-- Font Weight -->
+			<h3 class="justify-center p-2">Font Weight:</h3>
 			<div class="mb-1 justify-center pt-2">
 				<span class="fs-md fw-r p-1">Regular Font Weight</span>
 				<span class="fs-md fw-l p-1">Light Font Weight</span>
 				<span class="fs-md fw-b p-1">Bold Font Weight</span>
 			</div>
+			<!-- Colours -->
+			<h3 class="justify-center p-2">Colours:</h3>
 			<div class="mb-1 justify-center">
 				<span class="text-primary p-1">Primary Text Color</span>
 				<span class="text-secondary p-1">Secondary Text Color</span>
@@ -31,6 +34,8 @@
 				<span class="text-warning p-1">Warning Text Color</span>
 				<span class="text-info bg-black p-1">Info Text Color</span>
 			</div>
+			<!-- Backgrounds -->
+			<h3 class="justify-center p-2">Backgrounds:</h3>
 			<div class="mb-1 justify-center">
 				<span class="bg-primary p-1 text-white"
 					>Primary Background</span
@@ -42,6 +47,8 @@
 				<span class="bg-warning p-1">Warning Background</span>
 				<span class="bg-info p-1">Info Background</span>
 			</div>
+			<!-- Borders -->
+			<h3 class="justify-center p-2">Borders:</h3>
 			<div class="mb-1 justify-center">
 				<span class="br br-primary p-1 mr-1">Primary Border</span>
 				<span class="br br-secondary p-1 mr-1">Secondary Border</span>
@@ -50,10 +57,12 @@
 				<span class="br br-info p-1">Info Border</span>
 			</div>
 			<!-- Links -->
+			<h3 class="justify-center p-2">Links:</h3>
 			<div>
-				<a class="link" href="#">Link</a>
+				<a class="link justify-center" href="#">Link</a>
 			</div>
 			<!-- Lists -->
+			<h3 class="justify-center p-2">Lists:</h3>
 			<div class="justify-center">
 				<ul>
 					<li>List Item 1</li>
@@ -73,7 +82,7 @@
 				</ol>
 			</div>
 			<!-- Buttons -->
-			<h3 class="justify-center pt-2"> Buttons:</h3>
+			<h3 class="justify-center pt-2">Buttons:</h3>
 			<div class="justify-center">
 				<button class="button-primary text-white br">Primary</button>
 				<button class="button-secondary br">Secondary</button>
