--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<div>
 				<p>Table</p>
 				<table>
-					<tr class="b">
+					<tr class="$border">
 						<th>R1C1</th>
 						<th>R1C2</th>
 					</tr>
