--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 	<body>
 		<div class="container">
 			<!-- Text Elements -->
+			<h2>Headings</h2>
+			<div class="h1">Heading 1</div>
+			<div class="h2">Heading 2</div>
+			<div class="h3">Heading 3</div>
+			<div class="h4">Heading 4</div>
+			<div class="h5">Heading 5</div>
+			<h2 class="h2">Text Sizes</h2>
 			<div class="justify-center">
 				<div class="fs-xxl mb pt-1 pb-2">Double Extra Large Text</div>
 			</div>
