--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			</div>
 
 			<!-- Tables -->
-			<div>
+			<div class="justify-center">
 				<p>Table</p>
 				<table>
 					<tr class="$border">
