--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
 				<span class="fs-md fw-l p-1">Light Font Weight</span>
 				<span class="fs-md fw-b p-1">Bold Font Weight</span>
 			</div>
-			
+
 			<!-- Colours -->
-			<h3 class="justify-center p-2">Colours:</h3>
-			<div class="mb-1 justify-center">
-				<span class="text-primary p-1">Primary Text Color</span>
-				<span class="text-secondary p-1">Secondary Text Color</span>
-				<span class="text-success p-1">Success Text Color</span>
-				<span class="text-warning p-1">Warning Text Color</span>
-				<span class="text-info bg-black p-1">Info Text Color</span>
+			<div class="container-bg">
+				<h3 class="justify-center p-2">Colours:</h3>
+				<div class="mb-1 justify-center">
+					<span class="text-primary p-1">Primary Text Color</span>
+					<span class="text-secondary p-1">Secondary Text Color</span>
+					<span class="text-success p-1">Success Text Color</span>
+					<span class="text-warning p-1">Warning Text Color</span>
+					<span class="text-info bg-black p-1">Info Text Color</span>
+				</div>
 			</div>
+
 
 			<!-- Backgrounds -->
 			<h3 class="justify-center p-2">Backgrounds:</h3>
