--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</div>
 
 			<!-- Colours -->
-			<div class="container-bg">
+			<div class="bg-peach">
 				<h3 class="justify-center p-2">Colours:</h3>
 				<div class="mb-1 justify-center">
 					<span class="text-primary p-1">Primary Text Color</span>
