--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 	<body>
 		<div class="container">
 			<!-- Text Elements -->
-			<h2>Headings</h2>
-			<div class="h1">Heading 1</div>
-			<div class="h2">Heading 2</div>
-			<div class="h3">Heading 3</div>
-			<div class="h4">Heading 4</div>
-			<div class="h5">Heading 5</div>
-			<h2 class="h2">Text Sizes</h2>
+			<h2 class="h2 text-white bg-primary pl-1">Headings</h2>
+			<div class="h1 justify-center">Heading 1</div>
+			<div class="h2 justify-center">Heading 2</div>
+			<div class="h3 justify-center">Heading 3</div>
+			<div class="h4 justify-center">Heading 4</div>
+			<div class="h5 justify-center mb-1">Heading 5</div>
+
+			<h2 class="h2 text-white bg-primary pl-1">Text Sizes</h2>
 			<div class="justify-center">
 				<div class="fs-xxl mb pt-1 pb-2">Double Extra Large Text</div>
 			</div>
@@ -37,7 +38,7 @@
 				<span class="fs-md fw-l p-1">Light Font Weight</span>
 				<span class="fs-md fw-b p-1">Bold Font Weight</span>
 			</div>
-			
+
 			<!-- Colours -->
 			<h3 class="justify-center p-2">Colours:</h3>
 			<div class="mb-1 justify-center">
