--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 			</div>
 
 			<!-- Colours -->
-			<div class="bg-peach">
+			<div class="bg-peach br-lg p-2">
 				<h3 class="justify-center p-2">Colours:</h3>
 				<div class="mb-1 justify-center">
-					<span class="text-primary p-1">Primary Text Color</span>
-					<span class="text-secondary p-1">Secondary Text Color</span>
-					<span class="text-success p-1">Success Text Color</span>
-					<span class="text-warning p-1">Warning Text Color</span>
-					<span class="text-info bg-black p-1">Info Text Color</span>
+					<span class="text-primary p-1 bg-white">Primary Text Color</span>
+					<span class="text-secondary p-1 bg-white">Secondary Text Color</span>
+					<span class="text-success p-1 bg-white">Success Text Color</span>
+					<span class="text-warning p-1 bg-white">Warning Text Color</span>
+					<span class="text-info bg-black p-1 bg-white">Info Text Color</span>
 				</div>
 			</div>
 
