remove text sizes

--- a/index.html
+++ b/index.html
@@ -16,23 +16,7 @@
 			<div class="h4 justify-center">Heading 4</div>
 			<div class="h5 justify-center mb-1">Heading 5</div>
 
-			<h2 class="h2 text-white bg-primary pl-1">Text Sizes</h2>
-			<div class="justify-center">
-				<div class="fs-xxl mb pt-1 pb-2">Double Extra Large Text</div>
-			</div>
-			<div class="justify-center">
-				<div class="fs-xl mb-1">Extra Large Text</div>
-			</div>
-			<div class="justify-center">
-				<div class="fs-lg mb-1">Large Text</div>
-			</div>
-			<div class="justify-center">
-				<div class="fs-md mb-1">Medium Text</div>
-			</div>
-			<div class="justify-center">
-				<div class="fs-sm mb-1">Small Text</div>
-			</div>
-
+			<h2 class="h2 text-white bg-primary pl-1">Font Weights</h2>
 			<div class="mb-1 justify-center">
 				<span class="fs-md fw-r p-1">Regular Font Weight</span>
 				<span class="fs-md fw-l p-1">Light Font Weight</span>
@@ -50,7 +34,6 @@
 					<span class="text-info bg-black p-1">Info Text Color</span>
 				</div>
 			</div>
-
 
 			<!-- Backgrounds -->
 			<h3 class="justify-center p-2">Backgrounds:</h3>
