heading size changes

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	<body>
 		<div class="container">
 			<!-- Text Elements -->
-			<h2 class="h2 text-white bg-primary pl-1">Headings</h2>
-			<div class="h1 justify-center">Heading 1</div>
-			<div class="h2 justify-center">Heading 2</div>
-			<div class="h3 justify-center">Heading 3</div>
-			<div class="h4 justify-center">Heading 4</div>
-			<div class="h5 justify-center mb-1">Heading 5</div>
+			<h2 class="fs-lg text-white bg-primary pl-1">Headings</h2>
+			<div class="fs-xxl justify-center">Heading 1</div>
+			<div class="fs-xl justify-center">Heading 2</div>
+			<div class="fs-lg justify-center">Heading 3</div>
+			<div class="fs-md justify-center">Heading 4</div>
+			<div class="fs-md justify-center mb-1">Heading 5</div>
 
-			<h2 class="h2 text-white bg-primary pl-1">Font Weights</h2>
+			<h2 class="fs-lg text-white bg-primary pl-1">Font Weights</h2>
 			<div class="mb-1 justify-center">
 				<span class="fs-md fw-r p-1">Regular Font Weight</span>
 				<span class="fs-md fw-l p-1">Light Font Weight</span>
@@ -27,11 +27,21 @@
 			<div class="bg-peach br-lg p-2">
 				<h3 class="justify-center p-2">Colours:</h3>
 				<div class="mb-1 justify-center">
-					<span class="text-primary p-1 bg-white">Primary Text Color</span>
-					<span class="text-secondary p-1 bg-white">Secondary Text Color</span>
-					<span class="text-success p-1 bg-white">Success Text Color</span>
-					<span class="text-warning p-1 bg-white">Warning Text Color</span>
-					<span class="text-info bg-black p-1 bg-white">Info Text Color</span>
+					<span class="text-primary p-1 bg-white"
+						>Primary Text Color</span
+					>
+					<span class="text-secondary p-1 bg-white"
+						>Secondary Text Color</span
+					>
+					<span class="text-success p-1 bg-white"
+						>Success Text Color</span
+					>
+					<span class="text-warning p-1 bg-white"
+						>Warning Text Color</span
+					>
+					<span class="text-info bg-black p-1 bg-white"
+						>Info Text Color</span
+					>
 				</div>
 			</div>
 
