--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				<span class="fs-md fw-b p-1">Bold Font Weight</span>
 			</div>
 
+	<div class="flex">
 			<!-- Colours -->
 			<div class="bg-peach br-lg p-2">
 				<h3 class="justify-center p-2">Colours:</h3>
@@ -51,20 +52,22 @@
 				</div>
 			</div>
 
-
 			<!-- Backgrounds -->
-			<h3 class="justify-center p-2">Backgrounds:</h3>
-			<div class="mb-1 justify-center">
-				<span class="bg-primary p-1 text-white"
-					>Primary Background</span
-				>
-				<span class="bg-secondary p-1 text-white"
-					>Secondary Background</span
-				>
-				<span class="bg-success p-1">Success Background</span>
-				<span class="bg-warning p-1">Warning Background</span>
-				<span class="bg-info p-1">Info Background</span>
+			<div class="bg-peach br-lg p-2">
+				<h3 class="justify-center p-2">Backgrounds:</h3>
+				<div class="mb-1 justify-center">
+					<span class="bg-primary p-1 text-white"
+						>Primary Background</span
+					>
+					<span class="bg-secondary p-1 text-white"
+						>Secondary Background</span
+					>
+					<span class="bg-success p-1">Success Background</span>
+					<span class="bg-warning p-1">Warning Background</span>
+					<span class="bg-info p-1">Info Background</span>
+				</div>
 			</div>
+	</div>
 
 			<!-- Borders -->
 			<h3 class="justify-center p-2">Borders:</h3>
