--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<div class="flex">
 			<!-- Colours -->
-			<div class="bg-peach br-lg p-2">
+			<div class="bg-peach br-lg p-2 mr-1">
 				<h3 class="justify-center p-2">Colours:</h3>
 				<div class="mb-1 justify-center">
 					<span class="text-primary p-1 bg-white"
