--- a/index.html
+++ b/index.html
@@ -9,59 +9,60 @@
 	<body>
 		<div class="container">
 			<!-- Text Elements -->
-			<h2 class="fs-lg text-white bg-primary pl-1">Headings</h2>
-			<div class="fs-xxl justify-center">Heading 1</div>
-			<div class="fs-xl justify-center">Heading 2</div>
-			<div class="fs-lg justify-center">Heading 3</div>
-			<div class="fs-md justify-center">Heading 4</div>
-			<div class="fs-md justify-center mb-1">Heading 5</div>
+			<h2 class="fs-xl text-white bg-primary pl-1 br">Headings</h2>
+			<h1 class="fs-xxxl justify-center">Heading Level 1</h1>
+			<h2 class="fs-xxl justify-center">Heading Level 2</h2>
+			<h3 class="fs-xl justify-center">Heading Level 3</h3>
+			<h4 class="fs-lg justify-center">Heading Level 4</h4>
+			<h5 class="fs-md justify-center">Heading level 5</h5>
+			<h6 class="fs-sm justify-center mb-1">Heading Level 6</h6>
 
-			<h2 class="fs-lg text-white bg-primary pl-1">Font Weights</h2>
+			<h2 class="fs-xl text-white bg-primary pl-1 br">Font Weights</h2>
 			<div class="mb-1 justify-center">
 				<span class="fs-md fw-r p-1">Regular Font Weight</span>
 				<span class="fs-md fw-l p-1">Light Font Weight</span>
 				<span class="fs-md fw-b p-1">Bold Font Weight</span>
 			</div>
 
-	<div class="flex">
-			<!-- Colours -->
-			<div class="bg-peach br-lg p-2">
-				<h3 class="justify-center p-2">Colours:</h3>
-				<div class="mb-1 justify-center">
-					<span class="text-primary p-1 bg-white"
-						>Primary Text Color</span
-					>
-					<span class="text-secondary p-1 bg-white"
-						>Secondary Text Color</span
-					>
-					<span class="text-success p-1 bg-white"
-						>Success Text Color</span
-					>
-					<span class="text-warning p-1 bg-white"
-						>Warning Text Color</span
-					>
-					<span class="text-info bg-black p-1 bg-white"
-						>Info Text Color</span
-					>
+			<div class="flex">
+				<!-- Colours -->
+				<div class="bg-peach br-lg p-2">
+					<h3 class="justify-center p-2">Colours:</h3>
+					<div class="mb-1 justify-center">
+						<span class="text-primary p-1 bg-white"
+							>Primary Text Color</span
+						>
+						<span class="text-secondary p-1 bg-white"
+							>Secondary Text Color</span
+						>
+						<span class="text-success p-1 bg-white"
+							>Success Text Color</span
+						>
+						<span class="text-warning p-1 bg-white"
+							>Warning Text Color</span
+						>
+						<span class="text-info bg-black p-1 bg-white"
+							>Info Text Color</span
+						>
+					</div>
 				</div>
-			</div>
 
-			<!-- Backgrounds -->
-			<div class="bg-peach br-lg p-2">
-				<h3 class="justify-center p-2">Backgrounds:</h3>
-				<div class="mb-1 justify-center">
-					<span class="bg-primary p-1 text-white"
-						>Primary Background</span
-					>
-					<span class="bg-secondary p-1 text-white"
-						>Secondary Background</span
-					>
-					<span class="bg-success p-1">Success Background</span>
-					<span class="bg-warning p-1">Warning Background</span>
-					<span class="bg-info p-1">Info Background</span>
+				<!-- Backgrounds -->
+				<div class="bg-peach br-lg p-2">
+					<h3 class="justify-center p-2">Backgrounds:</h3>
+					<div class="mb-1 justify-center">
+						<span class="bg-primary p-1 text-white"
+							>Primary Background</span
+						>
+						<span class="bg-secondary p-1 text-white"
+							>Secondary Background</span
+						>
+						<span class="bg-success p-1">Success Background</span>
+						<span class="bg-warning p-1">Warning Background</span>
+						<span class="bg-info p-1">Info Background</span>
+					</div>
 				</div>
 			</div>
-	</div>
 
 			<!-- Borders -->
 			<h3 class="justify-center p-2">Borders:</h3>
