--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			</div>
 
 			<!-- Inputs -->
-			<div>
+			<div class="justify-center">
 				<form action="">
 					<label for="inputText">Input textfield:</label><br />
 					<input
