--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="flex">
 				<!-- Colours -->
 				<div class="bg-peach br-lg p-2 mr-1">
-					<h3 class="justify-center p-2 fs-lg">Colours:</h3>
+					<h3 class="justify-center p-2 fs-lg">Colours</h3>
 					<div class="mb-1 justify-center">
 						<span class="text-primary p-1 bg-white"
 							>Primary Text Color</span
@@ -51,7 +51,7 @@
 				</div>
 				<!-- Backgrounds -->
 				<div class="bg-peach br-lg p-2">
-					<h3 class="justify-center p-2 fs-lg">Backgrounds:</h3>
+					<h3 class="justify-center p-2 fs-lg">Backgrounds</h3>
 					<div class="mb-1 justify-center">
 						<span class="bg-primary p-1 text-white"
 							>Primary Background</span
@@ -67,9 +67,7 @@
 			</div>
 
 			<!-- Borders -->
-			<h2 class="fs-xl text-white bg-primary pl-1 mb-1 mt-1 br">
-				Borders:
-			</h2>
+			<h2 class="fs-xl text-white bg-primary pl-1 mb-1 mt-1 br">Borders</h2>
 			<div class="mb-1 justify-center">
 				<span class="br bc-primary p-1 mr-1">Primary Border</span>
 				<span class="br bc-secondary p-1 mr-1">Secondary Border</span>
@@ -79,13 +77,13 @@
 			</div>
 
 			<!-- Links -->
-			<h3 class="justify-center p-2">Links:</h3>
+			<h2 class="fs-xl text-white bg-primary pl-1 br">Links</h2>
 			<div>
 				<a class="link justify-center" href="#">Link</a>
 			</div>
 
 			<!-- Lists -->
-			<h3 class="justify-center p-2">Lists:</h3>
+			<h3 class="justify-center p-2">Lists</h3>
 			<div class="justify-center">
 				<ul>
 					<li>List Item 1</li>
@@ -106,7 +104,7 @@
 			</div>
 
 			<!-- Buttons -->
-			<h3 class="justify-center pt-2">Buttons:</h3>
+			<h2 class="fs-xl text-white bg-primary pl-1 br">Buttons</h2>
 			<div class="justify-center">
 				<button class="button-primary text-white br">Primary</button>
 				<button class="button-secondary br">Secondary</button>
