--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			</div>
 
 			<!-- Lists -->
-			<h3 class="justify-center p-2">Lists</h3>
+			<h2 class="fs-xl text-white bg-primary pl-1 br">Lists</h2>
 			<div class="justify-center">
 				<ul>
 					<li>List Item 1</li>
