table title fixing

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 			<!-- Tables -->
 			<div class="justify-center">
-				<p>Table</p>
+				<h2 class="fs-xl text-white bg-primary pl-1 br">Table</h2>
 				<table>
 					<tr class="$border">
 						<th>R1C1</th>
