--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 			<!-- Tables -->
 			<div class="justify-center">
 				<h2 class="fs-xl text-white bg-primary pl-1 br">Table</h2>
+				<div>
 				<table>
 					<tr class="$border">
 						<th>R1C1</th>
@@ -181,6 +182,7 @@
 						<td>R5C2</td>
 					</tr>
 				</table>
+			</div>
 			</div>
 		</div>
 	</body>
