--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 			</div>
 
 			<!-- Forms -->
+			<h2 class="fs-xl text-white bg-primary pl-1 br">Forms</h2>
 			<div class="justify-center">
 				<form>
 					<input
@@ -138,6 +139,7 @@
 			</div>
 
 			<!-- Inputs -->
+			<h2 class="fs-xl text-white bg-primary pl-1 br">Inputs</h2>
 			<div class="justify-center">
 				<form action="">
 					<label for="inputText">Input textfield:</label><br />
@@ -155,6 +157,7 @@
 			</div>
 
 			<!-- Tables -->
+			<h2 class="fs-xl text-white bg-primary pl-1 br">Tables</h2>
 			<div class="justify-center">
 				<p>Table</p>
 				<table>
