--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				<span class="fs-md fw-b p-1">Bold Font Weight</span>
 			</div>
 
+			<!-- Flex Box -->
 			<h2 class="fs-lg text-white bg-primary pl-1 mb-1 br">
 				Colors & Backgrounds
 			</h2>
@@ -52,7 +53,8 @@
 				<!-- Backgrounds -->
 				<div class="bg-peach br-lg p-2">
 					<h3 class="justify-center p-2 fs-lg">Backgrounds</h3>
-					<div class="mb-1 justify-center">
+
+					<div class="mb-1 justify-center flex-stack">
 						<span class="bg-primary p-1 text-white"
 							>Primary Background</span
 						>
@@ -63,6 +65,7 @@
 						<span class="bg-warning p-1">Warning Background</span>
 						<span class="bg-info p-1">Info Background</span>
 					</div>
+
 				</div>
 			</div>
 
