--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
 				<span class="fs-md fw-l p-1">Light Font Weight</span>
 				<span class="fs-md fw-b p-1">Bold Font Weight</span>
 			</div>
-
+			<div class="mb-1 justify-center">
+				<p class="fs-md fw-r">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+					Perferendis maiores molestiae deserunt ullam nemo eos
+					impedit vitae in facilis velit! Molestiae facere blanditiis
+					quibusdam eligendi eos magni, vero temporibus error
+					asperiores libero quo consequatur laudantium. Commodi
+					expedita saepe amet et.
+				</p>
+			</div>
 			<!-- Flex Box -->
 			<h2 class="fs-lg text-white bg-primary pl-1 mb-1 br">
 				Colors & Backgrounds
@@ -65,12 +74,11 @@
 						<span class="bg-warning p-1">Warning Background</span>
 						<span class="bg-info p-1">Info Background</span>
 					</div>
-
 				</div>
 			</div>
 
 			<!-- Borders -->
-			<h2 class="fs-xl text-white bg-primary pl-1 mb-1 mt-1 br">
+			<h2 class="fs-lg text-white bg-primary pl-1 mb-1 mt-1 br">
 				Borders:
 			</h2>
 			<div class="mb-1 justify-center">
@@ -82,13 +90,17 @@
 			</div>
 
 			<!-- Links -->
-			<h3 class="justify-center p-2">Links:</h3>
+			<h2 class="fs-lg text-white bg-primary pl-1 mb-1 mt-1 br">
+				Links:
+			</h2>
 			<div>
-				<a class="link justify-center" href="#">Link</a>
+				<a class="link fs-lg justify-center" href="#">Link</a>
 			</div>
 
 			<!-- Lists -->
-			<h3 class="justify-center p-2">Lists:</h3>
+			<h2 class="fs-lg text-white bg-primary pl-1 mb-1 mt-1 br">
+				Lists:
+			</h2>
 			<div class="justify-center">
 				<ul>
 					<li>List Item 1</li>
@@ -165,29 +177,29 @@
 			<div>
 				<h2 class="fs-xl text-white bg-primary pl-1 br">Table</h2>
 				<div class="justify-center">
-				<table>
-					<tr class="$border">
-						<th>R1C1</th>
-						<th>R1C2</th>
-					</tr>
-					<tr>
-						<td>R2C1</td>
-						<td>R2C2</td>
-					</tr>
-					<tr>
-						<td>R3C1</td>
-						<td>R3C2</td>
-					</tr>
-					<tr>
-						<td>R4C1</td>
-						<td>R4C2</td>
-					</tr>
-					<tr>
-						<td>R5C1</td>
-						<td>R5C2</td>
-					</tr>
-				</table>
-			</div>
+					<table>
+						<tr class="$border">
+							<th>R1C1</th>
+							<th>R1C2</th>
+						</tr>
+						<tr>
+							<td>R2C1</td>
+							<td>R2C2</td>
+						</tr>
+						<tr>
+							<td>R3C1</td>
+							<td>R3C2</td>
+						</tr>
+						<tr>
+							<td>R4C1</td>
+							<td>R4C2</td>
+						</tr>
+						<tr>
+							<td>R5C1</td>
+							<td>R5C2</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</body>
