--- a/index.html
+++ b/index.html
@@ -19,19 +19,22 @@
 
 			<h2 class="fs-lg text-white bg-primary pl-1 br">Font Weights</h2>
 			<div class="mb-1 justify-center">
-				<span class="fs-md fw-r p-1">Regular Font Weight</span>
-				<span class="fs-md fw-l p-1">Light Font Weight</span>
-				<span class="fs-md fw-b p-1">Bold Font Weight</span>
-			</div>
-			<div class="mb-1 justify-center">
-				<p class="fs-md fw-r">
-					Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-					Perferendis maiores molestiae deserunt ullam nemo eos
-					impedit vitae in facilis velit! Molestiae facere blanditiis
-					quibusdam eligendi eos magni, vero temporibus error
-					asperiores libero quo consequatur laudantium. Commodi
-					expedita saepe amet et.
-				</p>
+				<span class="fs-md fw-r p-1"
+					>Regular Font Weight Lorem ipsum dolor sit amet consectetur
+					adipisicing elit. Numquam, corrupti ex libero molestiae
+					ipsam et consectetur optio! Qui, enim explicabo.</span
+				>
+				<span class="fs-md fw-l p-1"
+					>Light Font Weight Lorem ipsum dolor sit amet consectetur
+					adipisicing elit. Dolorum velit sunt temporibus qui
+					repudiandae incidunt cumque ipsam pariatur, libero
+					similique?</span
+				>
+				<span class="fs-md fw-b p-1"
+					>Bold Font Weight Lorem ipsum, dolor sit amet consectetur
+					adipisicing elit. Officiis ipsum itaque quasi omnis
+					deserunt. Nemo autem deserunt sunt nesciunt adipisci.</span
+				>
 			</div>
 			<!-- Flex Box -->
 			<h2 class="fs-lg text-white bg-primary pl-1 mb-1 br">
