--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
 			<h2 class="fs-lg text-white bg-primary pl-1 br">Font Weights</h2>
 			<div class="mb-1 justify-center">
 				<span class="fs-md fw-r p-1"
-					>Regular Font Weight Lorem ipsum dolor sit amet consectetur
-					adipisicing elit. Numquam, corrupti ex libero molestiae
-					ipsam et consectetur optio! Qui, enim explicabo.</span
+					>Regular Font Weight - Lorem ipsum dolor sit amet
+					consectetur adipisicing elit. Numquam, corrupti ex libero
+					molestiae ipsam et consectetur optio! Qui, enim
+					explicabo.</span
 				>
 				<span class="fs-md fw-l p-1"
-					>Light Font Weight Lorem ipsum dolor sit amet consectetur
+					>Light Font Weight - Lorem ipsum dolor sit amet consectetur
 					adipisicing elit. Dolorum velit sunt temporibus qui
 					repudiandae incidunt cumque ipsam pariatur, libero
 					similique?</span
 				>
 				<span class="fs-md fw-b p-1"
-					>Bold Font Weight Lorem ipsum, dolor sit amet consectetur
+					>Bold Font Weight - Lorem ipsum, dolor sit amet consectetur
 					adipisicing elit. Officiis ipsum itaque quasi omnis
 					deserunt. Nemo autem deserunt sunt nesciunt adipisci.</span
 				>
