flex for list items

--- a/index.html
+++ b/index.html
@@ -104,23 +104,26 @@
 			<h2 class="fs-lg text-white bg-primary pl-1 mb-1 mt-1 br">
 				Lists:
 			</h2>
-			<div class="justify-center">
-				<ul>
-					<li>List Item 1</li>
-					<li>List Item 2</li>
-					<li>List Item 3</li>
-					<li>List Item 4</li>
-					<li>List Item 5</li>
-				</ul>
-			</div>
-			<div class="justify-center">
-				<ol>
-					<li>List Item 1</li>
-					<li>List Item 2</li>
-					<li>List Item 3</li>
-					<li>List Item 4</li>
-					<li>List Item 5</li>
-				</ol>
+
+			<div class="flex justify-center">
+				<div class="justify-center">
+					<ul>
+						<li>List Item 1</li>
+						<li>List Item 2</li>
+						<li>List Item 3</li>
+						<li>List Item 4</li>
+						<li>List Item 5</li>
+					</ul>
+				</div>
+				<div class="justify-center ml-2">
+					<ol>
+						<li>List Item 1</li>
+						<li>List Item 2</li>
+						<li>List Item 3</li>
+						<li>List Item 4</li>
+						<li>List Item 5</li>
+					</ol>
+				</div>
 			</div>
 
 			<!-- Buttons -->
