--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				Lists:
 			</h2>
 
-			<div class="flex justify-center">
+			<div class="flex justify-center pb-2">
 				<div class="justify-center">
 					<ul>
 						<li>List Item 1</li>
