--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h6 class="fs-sm justify-center mb-1">Heading Level 6</h6>
 
 			<h2 class="fs-lg text-white bg-primary pl-1 br">Font Weights</h2>
-			<div class="mb-1 justify-center">
+			<div class="mb-1 justify-center pt-2">
 				<span class="fs-md fw-r p-1"
 					>Regular Font Weight - Lorem ipsum dolor sit amet
 					consectetur adipisicing elit. Numquam, corrupti ex libero
