--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
 				<span class="br bc-warning p-1 mr-1">Warning Border</span>
 				<span class="br bc-info p-1">Info Border</span>
 			</div>
+			<div class="mb-1 justify-center">
+				<span class="br-xs bc-primary p-1 mr-1">XS Border Radius</span>
+				<span class="br-sm bc-primary p-1 mr-1">SM Border Radius</span>
+				<span class="br bc-primary p-1 mr-1">MD Border Radius</span>
+				<span class="br-lg bc-primary p-1 mr-1">LG Border Radius</span>
+				<span class="br-full bc-primary p-1 mr-1"
+					>Full Border Radius</span
+				>
+			</div>
 
 			<!-- Links -->
 			<h2 class="fs-lg text-white bg-primary pl-1 mb-1 mt-1 br">
@@ -184,29 +193,29 @@
 			<div>
 				<h2 class="fs-xl text-white bg-primary pl-1 br">Table</h2>
 				<div class="justify-center">
-				<table>
-					<tr>
-						<th>R1C1</th>
-						<th>R1C2</th>
-					</tr>
-					<tr>
-						<td>R2C1</td>
-						<td>R2C2</td>
-					</tr>
-					<tr>
-						<td>R3C1</td>
-						<td>R3C2</td>
-					</tr>
-					<tr>
-						<td>R4C1</td>
-						<td>R4C2</td>
-					</tr>
-					<tr>
-						<td>R5C1</td>
-						<td>R5C2</td>
-					</tr>
-				</table>
-			</div>
+					<table>
+						<tr>
+							<th>R1C1</th>
+							<th>R1C2</th>
+						</tr>
+						<tr>
+							<td>R2C1</td>
+							<td>R2C2</td>
+						</tr>
+						<tr>
+							<td>R3C1</td>
+							<td>R3C2</td>
+						</tr>
+						<tr>
+							<td>R4C1</td>
+							<td>R4C2</td>
+						</tr>
+						<tr>
+							<td>R5C1</td>
+							<td>R5C2</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</body>
