--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			</div>
 
 			<!-- Buttons -->
-			<h2 class="fs-xl text-white bg-primary pl-1 br">Buttons</h2>
+			<h2 class="fs-lg text-white bg-primary pl-1 br">Buttons</h2>
 			<div class="justify-center">
 				<button class="button-primary text-white br">Primary</button>
 				<button class="button-secondary br">Secondary</button>
@@ -147,7 +147,7 @@
 			</div>
 
 			<!-- Forms -->
-			<h2 class="fs-xl text-white bg-primary pl-1 br">Forms</h2>
+			<h2 class="fs-lg text-white bg-primary pl-1 br">Forms</h2>
 			<div class="justify-center">
 				<form>
 					<input
@@ -172,7 +172,7 @@
 			</div>
 
 			<!-- Inputs -->
-			<h2 class="fs-xl text-white bg-primary pl-1 br">Inputs</h2>
+			<h2 class="fs-lg text-white bg-primary pl-1 br">Inputs</h2>
 			<div class="justify-center">
 				<form action="">
 					<label for="inputText">Input textfield:</label><br />
@@ -191,7 +191,7 @@
 
 			<!-- Tables -->
 			<div>
-				<h2 class="fs-xl text-white bg-primary pl-1 br">Table</h2>
+				<h2 class="fs-lg text-white bg-primary pl-1 br">Table</h2>
 				<div class="justify-center">
 					<table>
 						<tr>
