--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
+		<img src="logo.png" alt="our cool logo">
 		<div class="container">
 			<!-- Text Elements -->
 			<h2 class="fs-lg text-white bg-primary pl-1 br">Headings</h2>
